--- a/ThCGALUtils/ThCGALUtils.vcxproj.filters
+++ b/ThCGALUtils/ThCGALUtils.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="ThCGALSurface_mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThCGALShape_regularization.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThCGALKernel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -39,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ThCGALSurface_mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ThCGALShape_regularization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
