--- a/ThCGALUtilsMgd/ThCGALUtilsMgd.vcxproj.filters
+++ b/ThCGALUtilsMgd/ThCGALUtilsMgd.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThCGALInteropUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="clix.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ManagedObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThCGALUtilsMgd.cpp">
@@ -33,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ThCGALInteropUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
