--- a/ThCGALUtilsMgd/ThCGALUtilsMgd.vcxproj
+++ b/ThCGALUtilsMgd/ThCGALUtilsMgd.vcxproj
@@ -120,8 +120,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="clix.hpp" />
+    <ClInclude Include="ManagedObject.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ThCGALInteropUtils.h" />
     <ClInclude Include="ThCGALUtilsMgd.h" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +135,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ThCGALInteropUtils.cpp" />
     <ClCompile Include="ThCGALUtilsMgd.cpp" />
   </ItemGroup>
   <ItemGroup>
